# game-14

./: .gitignore  README.md  package-lock.json  package.json  version.sh
core/: CMakeLists.txt  index-with-cheats.js  index92-wc.js  index92.js  index94-wc.js  index94.js  index96-wc.js  index96.js  package-lock.json  package.json
core/certified/: gen-csum.sh
core/certified/v1.3/: csums.txt  game92-wc.node  game92.node  game94-wc.node  game94.node  game96-wc.node  game96.node
core/certified/v1.4/: csums.txt  game92-wc.node  game92.node  game94-wc.node  game94.node  game96-wc.node  game96.node
core/cmake/: BuildGame.cmake
core/scripts/: cheats-list.txt  cheats.js  cheats.sh  config-ut.js  find-and-print.sh  multi-count.js  overflow.js  test.js  twk-one.diff  ut.js
core/scripts/config-modules/: betConfig.js  paylines.js  paytable.js  reels.js
core/scripts/config-modules/data/: paylines.js  paytable.js  reel-sets.js  reels.js  symbols.js
core/scripts/js/: helper.js  parsers.js
core/scripts/modules/: base-spin.js  basic.js  free-spin.js  re-spin.js  reel-set.js  tests.md
core/scripts/plot/: .gitignore  plot.py  to-csv.sh
core/scripts/plot/py/: check.py  density_plot.py  parser.py  plot.py  scatter_plot.py  stat_plot.py  to_csv.py
core/scripts/submission/: generate.js  index.js  print.js  run-submission-collect.sh  run-submission.sh
core/simulation-logs/2025-05/: v96-normal.out
core/src/game/: CMakeLists.txt  bets.h  coin.h  config.h  constants.h  data-defs.h  extra-spin.h  game.cc  game.h  main.cc  main.h  paylines.h  paytable.cc  paytable.h  paywindow.cc  paywindow.h  reel.cc  reel.h  reelset.cc  reelset.h  round.cc  round.h  symbols.h
core/src/game-wc/: CMakeLists.txt  cheats.cc  cheats.h  game.cc  game.h  main.cc  main.h  paywindow.cc  reel.cc  reelset.cc  round.cc  stickybonus.cc
core/src/test/: CMakeLists.txt  harness.cc  harness.h  index.js  main.cc  main.h
core/src/test/MVS/: main.cpp
core/src/test/c++driver/: CMakeLists.txt  locale.h  main.cc  main.h  time.cc
core/src/test/c++harness/: CMakeLists.txt  locale.cc  main.cc  main.h  time.h
core/src/test/js/: data.js  harness.js  http-server.js  threads.js
core/src/test/others/: test-randomIndex.cc
core/src/utils/: colors.h  console.h  data-conversion.cc  data-conversion.h  error.h  extract.cc  extract.h  log.h  stack-trace.cc.bak  stack-trace.h.bak
docker/: .pino-prettyrc  README.md  dev-k8s.env  dev.yml  docker-compose.yml  env.sample  overrides-dev.yml  prod-k8s.env  stage-k8s.env
docker/services/game/: Dockerfile
docker/static/game/: Dockerfile  nginx.conf
k8s/helm/charts/service/: Chart.yaml  values-dev.yaml  values-prod.yaml  values-stage.yaml
k8s/helm/charts/service/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  pdb.yaml  service.yaml
rng/: .gitignore  package-lock.json  package.json
rng/certified/: librngapi-local.so.2.13  librngapi-local.so.2.14
rng/core/: CMakeLists.txt  index.js  package.json
rng/core/scripts/: test.js
rng/core/src/api/: CMakeLists.txt  rng-grpc.cc  rng-grpc.h  rng-local.cc  rng-local.h  rng-nats.cc  rng-nats.h  rng.cc  rng.h
rng/core/src/lib/: CMakeLists.txt  date.cc  date.h  rand.cc  rand.h
rng/core/src/napi/: CMakeLists.txt  conversion.cc  conversion.h  main.cc  main.h
rng/core/src/test/bitstream/: CMakeLists.txt  main.cc  sizes.cc
rng/core/src/test/double/: CMakeLists.txt  main.cc  rng-version.cc
rng/core/src/test/scaled/: CMakeLists.txt  check.js  main.cc  sizes.cc
rng/core/src/test/simple/: CMakeLists.txt  main.cc
rng/core/src/utils/: byteorder.cc  byteorder.h  colors.h  exception.cc  exception.h  hexdump.cc  hexdump.h
rng/service/: config.js  index.js  package.json  rng-ctrl.js
rng/service/grpc/: CMakeLists.txt  rng.proto  server.cc  server.js
rng/service/grpc/test/: client.cc  load.cc
rng/service/scripts/: nats-req
rng/service/scripts/templates/: get-scaled-vector.json  get-scaled.json
scripts/: config.js  load-via-http.js  load-via-nats.js  nats-core.js  play.js  reseed.js  sample.env
service/: .gitignore  config.js  index.js  package.json  sample.env
service/common/: log.js  nats-core.js
service/lib/: express.js  game.js  message.js  queue.js  thread-ctrl.js
