cmake_minimum_required(VERSION 3.15)
project(rng)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

set(TOP_DIR ${PROJECT_SOURCE_DIR})
set(CMAKE_CXX_FLAGS_RELEASE "-Wall -Wextra")
set(CMAKE_C_FLAGS_RELEASE "-Wall -Wextra")

add_subdirectory(src/lib)
add_subdirectory(src/api)
add_subdirectory(src/napi)
add_subdirectory(src/test/simple)
add_subdirectory(src/test/double)
add_subdirectory(src/test/bitstream)
add_subdirectory(src/test/scaled)
